--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "hamburger-react": "^2.4.0",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
